--- a/dark_light_mode_toggling/src/App.css
+++ b/dark_light_mode_toggling/src/App.css
@@ -1,38 +1,35 @@
 .App {
   text-align: center;
+  height: 100vh;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.nav{
+  height: 100px;
+  width: 100%;
+  border: 1px solid gray;
+  margin: 1px;
   display: flex;
-  flex-direction: column;
+  justify-content:space-around;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  text-align: center;
+}
+
+.nav button{
+  color: gray;
+}
+.a{
+  text-decoration: none;
+  font-size: 29px;
+  color:gray;
+
+}
+
+.light{
+  background-color: white;
+  color: black;
+}
+
+.dark{
+  background-color: black;
   color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
